--- a/Tuan4/SpringDataJPA/src/main/resources/application.properties
+++ b/Tuan4/SpringDataJPA/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=QLCB
-spring.datasource.username=sa
-spring.datasource.password=1122288
+spring.datasource.url=jdbc:sqlserver://localhost:3306;databaseName=QLCB
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
